--- a/munkaim.html
+++ b/munkaim.html
@@ -18,7 +18,7 @@
 			<div class="nav-linkek">
 
 				<ul>
-					<li><a href="text.html">Kezdőlap</a></li>
+					<li><a href="index.html">Kezdőlap</a></li>
 					
 					<li><a href="rolam.html">Rólam</a></li>
 					
