--- a/weblaptervezes.html
+++ b/weblaptervezes.html
@@ -39,8 +39,8 @@
 		<p>Először nem tudtam, hogy kezdjek hozzá, aztán nem volt kedvem. Többnyire az időbeosztással volt gondom.</p>
 	</section>
 </div>
-<section class="doboz2">
-	<div class="galeria2">
+<section class="doboz">
+	<div class="galeria">
 		<img src="kepek/terv.png">
 		</div>
 </section>
