--- a/weblaptervezes.html
+++ b/weblaptervezes.html
@@ -40,7 +40,7 @@
 	</section>
 </div>
 <section class="doboz">
-	<div class="galeria">
+	<div class="galeria2">
 		<img src="kepek/terv.png">
 		</div>
 </section>
