--- a/weblaptervezes.html
+++ b/weblaptervezes.html
@@ -39,7 +39,7 @@
 		<p>Először nem tudtam, hogy kezdjek hozzá, aztán nem volt kedvem. Többnyire az időbeosztással volt gondom.</p>
 	</section>
 </div>
-<section class="doboz">
+<section class="doboz2">
 	<div class="galeria2">
 		<img src="kepek/terv.png">
 		</div>
