--- a/weblaptervezes.html
+++ b/weblaptervezes.html
@@ -39,10 +39,12 @@
 		<p>Először nem tudtam, hogy kezdjek hozzá, aztán nem volt kedvem. Többnyire az időbeosztással volt gondom.</p>
 	</section>
 </div>
+<div class="szovegdoboz">	
 <section class="doboz2">
 	<div class="galeria2">
 		<img src="kepek/terv.png">
 		</div>
+</div>	
 </section>
 
 </body>
